state of the art and localization

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -97,11 +97,11 @@
 \appendix
 
 \cleardoublepage
-\printglossary
+%\printglossary
 
 % list of figures & algorithms
 \listoffigures
-\listofalgorithms
+%\listofalgorithms
 
 \cleardoublepage
 \bibliography{thesis_bibliography}
