--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,8 +1,10 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
-I give thanks to Prof. Dr. Hertzberg and the people of the working group Knowledge Based Systems for their overall support with my thesis.
+I would like to thank Prof. Dr. Hertzberg and the people of the working group Knowledge Based Systems for their overall support with my thesis.
 
-Particularly I would like to thank Dr. Thomas Wiemann for his great advice and support. His reviews, critiques and ideas helped me a lot tackling the topic and solving the problems I had to overcome while developing the algorithm.
+Particularly I give thanks to Dr. Thomas Wiemann for his great advice and support. His reviews, critiques and ideas helped me a lot tackling the topic and solving the problems I had to overcome while developing the AMCL6D algorithm.
+
+\bigskip
 
 Additionally many thanks to Lisa Goerke for reading through my thesis and providing lots of valuable feedback and remarks.
 \end{document}
