--- a/base/thesis_KBS.cls
+++ b/base/thesis_KBS.cls
@@ -365,7 +365,7 @@
 
 \newenvironment{acknowledgements}
 {
-  \thispagestyle{empty}\chapter*{Acknowledgements}\medskip
+  \thispagestyle{empty}\par\vspace*{\fill}\section*{Acknowledgements}
 }{}
 
 
