--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -2,5 +2,6 @@
 \newacronym{SLAM}{SLAM}{Simultaneous Localization and Mapping}
 \newacronym{AMCL}{AMCL}{Augmented Monte Carlo Localization}
 \newacronym{AMCL6D}{AMCL6D}{Augmented Monte Carlo Localization in six dimensions}
-\newacronym{pdf}{pdf}{probability density function}
-\newacronym{cdf}{cdf}{cumulative distribution functions}
+\newacronym{pdf}{PDF}{probability density function}
+\newacronym{cdf}{CDF}{cumulative distribution functions}
+\newacronym{KNN}{k-NN}{k-Nearest Neighbors}
