--- a/setup.tex
+++ b/setup.tex
@@ -3,11 +3,12 @@
 \chapter{Robot setup and software}
 
 \begin{itemize}
-	\item Kurt, kinematics, kinect camera/laser scanner,
+	%\item Kurt, kinematics, kinect camera/laser scanner,
   \item ROS Hydro (released 2013)
   \item Las Vegas Reconstruction Kit
   \item CGAL Raytracer
   \item Ubuntu 12.04 
+  \item FLANN
 \end{itemize}
 
 
