--- a/Thesis.tex
+++ b/Thesis.tex
@@ -26,6 +26,12 @@
 \loadglsentries{glossary_and_acronyms}
 
 \newcommand{\p}[3][p]{\ensuremath{#1\!\left({#2}\middle|{#3}\right)}}
+
+\def\figRef#1{Figure~\ref{#1}}
+\def\algRef#1{Algorithm~\ref{#1}}
+\def\tableRef#1{Table~\ref{#1}}
+\def\formRef#1{Formula~\ref{#1}}
+\def\pageRef#1{Page~\pageref{#1}}
 %\usepackage{makeidx}
 %\makeindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
