--- a/introduction.tex
+++ b/introduction.tex
@@ -16,9 +16,9 @@ The situation of relocating a robot and thus forcing it to redetermine its posit
 
 \section{Idea and motivation}
 
-There are several algorithms which solve localization problems, be they local or global, in two dimensional maps. A very popular algorithm, which is also capable of solving the kidnapped robot problem, is the \gls{AMCL}. 
+There are several algorithms which solve localization problems in two dimensional maps---local or global. A very popular algorithm, which is also capable of solving the kidnapped robot problem, is the Monte Carlo Localization\cite[]{DellaertFoxBurgardThrun:1999}. One variant, the \gls{AMCL}, can be found in \citet{ThrunBurgardFox:2005}.
 
-In robotics many environments are represented as 2D maps. This is useful for many real-life applications, since lots of robots operate in more or less flat environments. Although it is sufficient for many environments to represent them as a 2D map, environments with altitude differences (e.g. factories with ramps or normal houses with stairs) are hard to represent this way. Also robots which are capable of moving in more than two dimensions, e.g. flying robots, would be better off with more information.
+For this algorithm as well as for other applications in robotics, environments are represented as 2D maps. This is useful for many real-life applications, since many robots operate in more or less flat environments. Although it is sufficient for many environments to represent them as a 2D map, environments with altitude differences (e.g. factories with ramps or normal houses with stairs) are hard to represent this way. Also robots which are capable of moving in more than two dimensions, e.g. flying robots, could benefit from more information than just 2D maps.
 
 However, there are few approaches to locate robots in 3D environments. Therefore I will derive an algorithm based on the classic \gls{AMCL} to localize a robot in an arbitrary 3D environment.
 
