--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -22,16 +22,26 @@
   year      = "2005",
 }
 
+@inproceedings{DellaertFoxBurgardThrun:1999,
+  author       = "Frank Dellaert and Dieter Fox and Wolfram Burgard and Sebastian Thrun",
+  title        = "{Monte Carlo Localization for Mobile Robots}",
+  booktitle    = "{Robotics and Automation}",
+  pages        = "64--72",
+  year         = "1999",
+  publisher    = "IEEE",
+  address      = "Detroit, MI"
+}
+
 @inproceedings{Smithers:1994,
   author       = "Tim Smithers",
   title        = "{On Why Better Robots Make it Harder}",
-  booktitle    = "Proceedings of the third international conference on Simulation of adaptive behavior: from animals to animats 3: from animals to animats 3",
+  booktitle    = "{Proceedings of the third international conference on Simulation of adaptive behavior: from animals to animats 3: from animals to animats 3}",
   pages        = "64--72",
   year         = "1994",
   organization = "MIT Press",
   publisher    = "D. Cliff et al.",
 }
-  
+ 
 @incollection{gfxgems:1995,
   author    = "Ken Shoemake",
   title     = "{Uniform Random Rotations}",
