motion model, sensor model

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -17,7 +17,7 @@
 
 %%%%% my additions
 \usepackage{subfiles}
-\usepackage[linesnumbered, procnumbered, nofillcomment, boxed, algochapter]{algorithm2e}\DontPrintSemicolon
+\usepackage[linesnumbered, procnumbered, nofillcomment, boxed, algochapter]{algorithm2e}\DontPrintSemicolon\SetAlCapSkip{.4em}
 %\usepackage{subcaption}
 \usepackage{todonotes}
 
@@ -44,7 +44,7 @@
 \firstSupervisor{Prof. Dr. Joachim Hertzberg}
 \secondSupervisor{Dr. rer. nat. Thomas Wiemann, M. Sc.}
 
-%\submitdate{October 2014}
+\submitdate{November 2014}
 
 \generatetitle
 
