--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -5,3 +5,6 @@
 \newacronym{pdf}{PDF}{probability density function}
 \newacronym{cdf}{CDF}{cumulative distribution functions}
 \newacronym{KNN}{k-NN}{k-Nearest Neighbors}
+\newacronym{CGAL}{CGAL}{Computational Geometry Algorithms Library}
+\newacronym{AABB}{AABB tree}{axis-aligned bounding boxes}
+\newacronym{ROS}{ROS}{Robot Operating System}
