--- a/thesis_bibliography.bib
+++ b/thesis_bibliography.bib
@@ -61,3 +61,28 @@
   howpublished = {\url{http://www.robocup.org}},
   year         = "2008",
 }
+
+@incollection{cgal:atw-aabb-14b,
+  author = {Pierre Alliez and Stéphane Tayeb and Camille Wormser},
+  title = {3D Fast Intersection and Distance Computation (AABB Tree)},
+  publisher = {{CGAL Editorial Board}},
+  edition = {{4.5}},
+  booktitle = {{CGAL} User and Reference Manual},
+  url = {http://doc.cgal.org/latest/AABB_tree},
+  year = 2014,
+  note = "Last accessed: October 31st, 2014",
+}
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
